feat: EWOH slow query observability
